ajout navigation basique

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import Header from "../components/Header.astro";
 ---
 
 <!doctype html>
@@ -10,8 +10,9 @@
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <title>Accueil</title>
     </head>
-    
+
     <body>
+        <Header/>
         <h1>Accueil</h1>
     </body>
 </html>
