--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,5 +1,5 @@
 ---
-
+import Header from "../components/Header.astro";
 ---
 
 <!doctype html>
@@ -12,6 +12,7 @@
     </head>
     
     <body>
+        <Header/>
         <h1>Offres</h1>
     </body>
 </html>
