test avec des classes tailwind

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,13 @@
-<footer>
+<footer class="absolute bottom-0  bg-black text-white w-full">
     <ul>
         <li>
-            <p>Test footer</p>
+            <p class="text-xs">Nous contacter</p>
+        </li>
+        <li>
+            <p class="text-xs">À porpos</p>
+        </li>
+        <li>
+            <p class="text-xs">Mentions légales</p>
         </li>
     </ul>
 </footer>
