--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -3,5 +3,5 @@ import Base from "../layouts/Base.astro";
 ---
 
 <Base title="Offres">
-    <h1>Offres</h1>
+    <h1 class="text-4xl">Offres</h1>
 </Base>
