--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,5 @@ import Base from "../layouts/Base.astro";
 ---
 
 <Base title="Accueil">
-    <h1>Accueil</h1>
+    <h1 class="text-4xl">Accueil</h1>
 </Base>
