--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="absolute bottom-0  bg-black text-white w-full">
+<footer class="absolute bottom-0  bg-black text-white w-full p-4">
     <ul>
         <li>
             <p class="text-xs">Nous contacter</p>
