--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,13 @@
-<footer class="absolute bottom-0  bg-black text-white w-full p-4">
+<footer class="absolute bottom-0  bg-black text-gray-300 w-full p-4">
     <ul>
         <li>
-            <p class="text-xs">Nous contacter</p>
+            <p class="text-xs m-1">Nous contacter</p>
         </li>
         <li>
-            <p class="text-xs">À porpos</p>
+            <p class="text-xs m-1">À propos</p>
         </li>
         <li>
-            <p class="text-xs">Mentions légales</p>
+            <p class="text-xs m-1">Mentions légales</p>
         </li>
     </ul>
 </footer>
