texte placeholder sur les pages pour simuler du contenu

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,14 @@ import Base from "../layouts/Base.astro";
 ---
 
 <Base title="Accueil">
-    <h1 class="text-4xl">Accueil</h1>
+    <h1 class="text-4xl my-4">Accueil</h1>
+    <p>
+        Découvrez un service immobilier sur mesure, pensé pour répondre à vos
+        besoins. Que vous souhaitiez acheter, vendre ou louer, notre équipe
+        d’experts vous accompagne à chaque étape pour concrétiser vos projets en
+        toute sérénité. Avec une sélection de biens diversifiée et un
+        savoir-faire reconnu, nous mettons tout en œuvre pour trouver le lieu
+        qui correspond parfaitement à vos attentes. Ensemble, trouvons votre
+        prochain chez-vous !
+    </p>
 </Base>
