--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -3,5 +3,13 @@ import Base from "../layouts/Base.astro";
 ---
 
 <Base title="Offres">
-    <h1 class="text-4xl">Découvrez toutes les offres</h1>
+    <h1 class="text-4xl my-4">Découvrez toutes les offres</h1>
+    <p>
+        Explorez notre sélection exclusive de biens immobiliers. Que vous
+        recherchiez une maison familiale, un appartement moderne ou un local
+        professionnel, notre page "Offres" regroupe des opportunités variées
+        adaptées à tous les projets. Utilisez nos filtres personnalisés pour
+        affiner votre recherche et découvrez des propriétés qui répondent à vos
+        critères. Votre futur bien n’attend plus que vous !
+    </p>
 </Base>
