--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -15,7 +15,7 @@ const {title} = Astro.props;
     
     <body>
         <Header/>
-        <main>
+        <main class="p-2">
             <slot/>
         </main>
         <Footer/>
