--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,5 @@
 <nav class="bg-gray-700 text-white flex justify-center gap-4">
     <a href="/">Accueil</a>
     <a href="/offres">Offres</a>
+    <a href="/agenda">Agenda</a>
 </nav>
