affichage du nom des maisons

--- a/src/pages/agenda.astro
+++ b/src/pages/agenda.astro
@@ -1,5 +1,17 @@
 ---
 import Base from "../layouts/Base.astro";
+const events = [
+ {
+     title: "Conférence sur les astres",
+     date: "Lundi 12 Juillet",
+     favori: true,
+ },
+ {
+     title: "Atelier sur les étoiles",
+     date: "Mardi 13 Juillet",
+     favori: false,
+ },
+];
 ---
 
 <Base title="Accueil">
