--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,4 +1,5 @@
 ---
+import Card from "../components/Card.astro";
 import Base from "../layouts/Base.astro";
 const offres = [
     {
@@ -47,9 +48,9 @@ const offres = [
         affiner votre recherche et découvrez des propriétés qui répondent à vos
         critères. Votre futur bien n’attend plus que vous !
     </p>
-    <div>
-        {offres.map(offre => (
-            <p>{offre.nomMaison}</p>
+    <div class="flex gap-4">
+        {offres.map((offre) => (
+            <Card nomMaison={offre.nomMaison} adresse={offre.adresse} prix={offre.prix}/>
         ))}
     </div>
 </Base>
