--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,9 +2,9 @@
 const {nomMaison,adresse,prix,favori} = Astro.props;
 ---
 
-<div class="border p-4 rounded">
+<div x-data=`{fav : ${favori}}` class="border p-4 rounded">
     <h3 class="text-xl">{nomMaison}</h3>
     <p>{prix}$/mois</p>
     <p>{adresse}</p>
-    <p>favori : {favori}</p>
+    <button class="border rounded-xl p-1" :class="{'bg-red-300':fav}">favori</button>
 </div>
