--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,8 +3,8 @@ const {nomMaison,adresse,prix,favori} = Astro.props;
 ---
 
 <div x-data=`{fav : ${favori}}` class="border p-4 rounded">
-    <h3 class="text-xl">{nomMaison}</h3>
-    <p>{prix}$/mois</p>
-    <p>{adresse}</p>
-    <button class="border rounded-xl p-1" :class="{'bg-red-300':fav}">favori</button>
+    <h3 class="text-2xl">{nomMaison}</h3>
+    <p class="text-lg">{prix}$/mois</p>
+    <p class="text-gray-500">{adresse}</p>
+    <button class="rounded-xl p-1 text-xs bg-gray-200" :class="{'bg-blue-200':fav}">favori</button>
 </div>
