--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -6,5 +6,5 @@ const {nomMaison,adresse,prix,favori} = Astro.props;
     <h3 class="text-2xl">{nomMaison}</h3>
     <p class="text-lg">{prix}$/mois</p>
     <p class="text-gray-500">{adresse}</p>
-    <button class="rounded-xl p-1 text-xs bg-gray-200" :class="{'bg-blue-200':fav}">favori</button>
+    <button class="rounded-xl p-1 text-xs bg-gray-200" :class="{'bg-blue-200':fav}" @click="fav =!fav">favori</button>
 </div>
