--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,8 +1,9 @@
 ---
-const {nomMaison,adresse,prix,favori} = Astro.props;
+const {nomMaison,adresse,prix,favori,imgURL} = Astro.props;
 ---
 
-<div x-data=`{fav : ${favori}}` class="border p-4 rounded">
+<div x-data=`{fav : ${favori}}` class="border p-4 rounded w-[300px] shrink-0">
+    <img class="rounded-md" src={imgURL} alt="alt">
     <h3 class="text-2xl">{nomMaison}</h3>
     <p class="text-lg">{prix}$/mois</p>
     <p class="text-gray-500">{adresse}</p>
