--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -26,7 +26,7 @@ const offres = await allMaisons();
             <span x-show="!showFav">Afficher tout</span>
         </button>
 
-        <div x-show="showFav" x-transition class="flex gap-4">
+        <div x-show="showFav" x-transition class="flex gap-4 overflow-x-scroll">
             {offres.map((offre) => <Card {...offre} />)}
         </div>
         <div x-show="!showFav" x-transition class="flex gap-4">
