card avec moins d'infos

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="absolute bottom-0  bg-black text-gray-300 w-full p-4">
+<footer class="bottom-0  bg-black text-gray-300 w-full p-4">
     <ul>
         <li>
             <p class="text-xs m-1">Nous contacter</p>
