--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,11 +1,9 @@
 ---
-const {nomMaison,adresse,prix,favori,imgURL} = Astro.props;
+const {nomMaison,favori,imgURL} = Astro.props;
 ---
 
-<div x-data=`{fav : ${favori}}` class="border p-4 rounded w-[300px] shrink-0">
+<div x-data=`{fav : ${favori}}` class="border p-4 rounded w-[300px]">
     <img class="rounded-md" src={imgURL} alt="alt">
     <h3 class="text-2xl">{nomMaison}</h3>
-    <p class="text-lg">{prix}$/mois</p>
-    <p class="text-gray-500">{adresse}</p>
-    <button class="rounded-xl p-1 text-x" :class="fav ? 'bg-blue-200' : 'bg-gray-200'" @click="fav =!fav">favori</button>
+    <button class="rounded-xl p-1 text-xs" :class="fav ? 'bg-blue-200' : 'bg-gray-200'" @click="fav =!fav">favori</button>
 </div>
