--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,9 +1,11 @@
 ---
-const {nomMaison,favori,imgURL} = Astro.props;
+const {id,nomMaison,favori,imgURL} = Astro.props;
+console.log({id});
 ---
 
 <div x-data=`{fav : ${favori}}` class="border p-4 rounded flex-auto">
     <img class="rounded-md" src={imgURL} alt="alt">
     <h3 class="text-2xl">{nomMaison}</h3>
     <button class="rounded-xl p-1 text-xs" :class="fav ? 'bg-blue-200' : 'bg-gray-200'" @click="fav =!fav">favori</button>
+    <a href={`/offres/${id}`}>Voir plus</a>
 </div>
