--- a/src/pages/offres/prix/[prix].astro
+++ b/src/pages/offres/prix/[prix].astro
@@ -1,17 +1,17 @@
 ---
-import {bySurface} from "../../../../backend.mjs";
+import { byPrice } from "../../../../backend.mjs";
 import Base  from '../../../layouts/Base.astro';
 import Card from "../../../components/Card.astro";
 
-const {surface} = Astro.params;
-const offres = await bySurface(surface);
+const {prix} = Astro.params;
+const offres = await byPrice(prix);
 if(!offres){
    return Astro.redirect('/offres');
 }
 ---
 
-<Base titre={surface}>
-    <h1 class="text-4xl my-4">Maisons avec une surface supérieur à {surface}m²</h1>
+<Base titre={prix}>
+    <h1 class="text-4xl my-4">Maisons avec un prix inférieur à {prix}$</h1>
     <div class="grid grid-cols-3 gap-4">
         {offres.map((offre) => <Card {...offre} />)}
     </div>
