--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -33,13 +33,40 @@ const offres = await allMaisons();
             <span x-show="grid">Afficher en liste</span>
             <span x-show="!grid">Afficher en grid</span>
         </button>
-        <a class="bg-slate-300" href={`/offres/surface/${50}`}>Supérieur à 50</a>
-        <a class="bg-slate-300" href={`/offres/surface/${80}`}>Supérieur à 80</a>
-        <a class="bg-slate-300" href={`/offres/surface/${200}`}>Supérieur à 200</a>
-        <div x-show="showFav" x-transition class="gap-4" :class="grid ? 'grid grid-cols-3':'flex flex-col'">
+        <div class="*:bg-slate-300 *:rounded-sm *:p-1">
+            <a href={`/offres/surface/${50}`}
+                >Supérieur à 50m²</a
+            >
+            <a href={`/offres/surface/${80}`}
+                >Supérieur à 80m²</a
+            >
+            <a href={`/offres/surface/${200}`}
+                >Supérieur à 200m²</a
+            >
+            <a href={`/offres/prix/${3000}`}
+                >Inférieur à 3000$</a
+            >
+            <a href={`/offres/prix/${4000}`}
+                >Inférieur à 4000$</a
+            >
+            <a href={`/offres/prix/${5000}`}
+                >Inférieur à 5000$</a
+            >
+        </div>
+        <div
+            x-show="showFav"
+            x-transition
+            class="gap-4"
+            :class="grid ? 'grid grid-cols-3':'flex flex-col'"
+        >
             {offres.map((offre) => <Card {...offre} />)}
         </div>
-        <div x-show="!showFav" x-transition class="gap-4" :class="grid ? 'grid grid-cols-3':'flex flex-col'">
+        <div
+            x-show="!showFav"
+            x-transition
+            class="gap-4"
+            :class="grid ? 'grid grid-cols-3':'flex flex-col'"
+        >
             {offres.map((offre) => offre.favori && <Card {...offre} />)}
         </div>
     </div>
