--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -35,56 +35,64 @@ if (Astro.request.method === "POST") {
         affiner votre recherche et découvrez des propriétés qui répondent à vos
         critères. Votre futur bien n’attend plus que vous !
     </p>
-
-    <form
-        class="flex flex-col gap-4 my-6 p-4 bg-gray-100 rounded-lg shadow-sm"
-        action="/offres"
-        method="POST"
-    >
-        <input
-            type="number"
-            name="minPrix"
-            placeholder="Prix minimum"
-            min="1"
-            class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-indigo-500 focus:outline-none"
-        />
-        <input
-            type="number"
-            name="maxPrix"
-            placeholder="Prix maximum"
-            min="1"
-            class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-indigo-500 focus:outline-none"
-        />
-        <input
-            type="submit"
-            value="Filtrer par prix"
-            class="w-full p-3 bg-indigo-500 text-white rounded-lg hover:bg-indigo-600 transition font-semibold cursor-pointer"
-        />
-    </form>
-    <p class="text-center text-red-500">{message}</p>
-
     <div x-data="{showFav: false, grid : true}">
-        <button
-            @click="showFav = !showFav"
-            class="border rounded bg-gray-200 p-1 m-2"
-            :class="{'bg-blue-200':showFav}"
-        >
-            <span x-show="showFav">Afficher les favoris</span>
-            <span x-show="!showFav">Afficher tout</span>
-        </button>
-        <button
-            @click="grid = !grid"
-            class="border rounded bg-gray-200 p-1 m-2"
-            :class="{'bg-blue-200':showFav}"
-        >
-            <span x-show="grid">Afficher en liste</span>
-            <span x-show="!grid">Afficher en grid</span>
-        </button>
-        <div class="*:bg-slate-300 *:rounded-sm *:p-1">
-            <a href={`/offres/surface/${50}`}>Supérieur à 50m²</a>
-            <a href={`/offres/surface/${80}`}>Supérieur à 80m²</a>
-            <a href={`/offres/prix/${3000}`}>Inférieur à 3000$</a>
-            <a href={`/offres/prix/${4000}`}>Inférieur à 4000$</a>
+        <div class="flex gap-4">
+            <form
+                class="flex flex-col gap-4 my-6 p-4 bg-gray-200 rounded-lg shadow-sm w-[200px]
+        *:w-full *:p-3 *:border *:border-gray-300 *:rounded-md *:focus:ring-2 *:focus:ring-indigo-500 *:focus:outline-none"
+                action="/offres"
+                method="POST"
+            >
+                <input
+                    type="number"
+                    name="minPrix"
+                    placeholder="Prix minimum"
+                    min="1"
+                    class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-indigo-500 focus:outline-none"
+                />
+                <input
+                    type="number"
+                    name="maxPrix"
+                    placeholder="Prix maximum"
+                    min="1"
+                    class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-indigo-500 focus:outline-none"
+                />
+                <input
+                    type="submit"
+                    value="Filtrer par prix"
+                    class="w-full p-3 bg-indigo-500 text-white rounded-lg hover:bg-indigo-600 transition font-semibold cursor-pointer"
+                />
+                <p class="text-center text-red-500 border-none">{message}</p>
+            </form>
+            <div class="flex flex-col">
+                <div>
+                    <button
+                        @click="showFav = !showFav"
+                        class="border rounded bg-gray-200 p-1 m-2"
+                        :class="{'bg-blue-200':showFav}"
+                    >
+                        <span x-show="showFav">Afficher les favoris</span>
+                        <span x-show="!showFav">Afficher tout</span>
+                    </button>
+                    <button
+                        @click="grid = !grid"
+                        class="border rounded bg-gray-200 p-1 m-2"
+                        :class="{'bg-blue-200':showFav}"
+                    >
+                        <span x-show="grid">Afficher en liste</span>
+                        <span x-show="!grid">Afficher en grid</span>
+                    </button>
+                </div>
+                <div class="flex flex-col gap-4 *:bg-slate-300 *:rounded-sm *:p-1 text-center">
+                    <a href={`/offres/surface/${50}`}>Supérieur à 50m²</a>
+                    <a href={`/offres/surface/${80}`}>Supérieur à 80m²</a>
+                    <a href={`/offres/prix/${3000}`}>Inférieur à 3000$</a>
+                    <a href={`/offres/prix/${4000}`}>Inférieur à 4000$</a>
+                </div>
+                <a class="text-center justify-center text m-8 p-8
+                bg-indigo-500 text-white rounded-lg hover:bg-indigo-600 transition font-semibold cursor-pointer" 
+                href="/offres/add">Ajouter une offre</a>
+            </div>
         </div>
         <div
             x-show="showFav"
